--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -7,7 +7,7 @@
 		= time_ago_in_words(@post.created_at)
 	.clearfix
 		.post_image_description
-			//= image_tag @post.image.url(:medium)
+			= image_tag @post.image.url(:medium)
 			.description= simple_format(@post.description)
 		.post_data
 			= link_to "Visit Link", @post.link, class: "button"
@@ -25,11 +25,11 @@
 				= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure?" }, class: "data"
 		 
 
-/ #comments
-/ 	%h2.comment_count= pluralize(@post.comments.count, "Comment")
-/ 	- @comments.each do |comment|
-/ 		.comment
-/ 			%p.username= comment.user.name
-/ 			%p.content= comment.content
+#comments
+	%h2.comment_count= pluralize(@post.comments.count, "Comment")
+	- @comments.each do |comment|
+		.comment
+			%p.username= comment.user.email
+			%p.content= comment.content
 
-/ 	= render "comments/form"
+	= render "comments/form"
