--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -26,7 +26,7 @@
 					%p.buttons
 						%span
 							%i.fa.fa-comments-o
-							//= post.comments.count
+							= post.comments.count
 						%span
 							%i.fa.fa-thumbs-o-up
-							//= post.get_likes.size
+							= post.get_likes.size
